# publicCode

./: .gitmodules  README.md
Arduino/FRAMInfo/: FRAMInfo.ino
Arduino/Http/http_client_secure_arduino/: .gitignore  Readme.md  http_client_secure_arduino.ino
Arduino/Http/http_post_file/: dependencies.txt  global_config.h  spiffs.ino
Arduino/RC/: RC.ino
Arduino/RCSwitch_receiver/ReceiveDemo_Advanced/: ReceiveDemo_Advanced.ino
Arduino/RF/: rf.ino
Arduino/ReceiveDemo_Advanced/: ReceiveDemo_Advanced.ino
Arduino/ds1820_arduino/: ds1820_arduino.ino  readme.md
Arduino/ds3231/DS3231_alarm.ino/: DS3231_alarm.ino.ino
Arduino/esp32Mqtt/: esp32Mqtt.ino
Arduino/firebase/: firebase.ino
Arduino/freeRtos/: freeRtos.ino
Arduino/freeRtos/ISR/: compile_commands.json  platformio.ini
Arduino/freeRtos/freeRtos/: freeRtos.ino
Arduino/i2c/Master/: master.ino
Arduino/i2c/slave/: slave.ino
Arduino/i2c_arduino_2/master/: .gitignore  master.ino
Arduino/i2c_arduino_2/slave/: .gitignore  slave.ino
Arduino/sqlite/: sqlite.ino
Arduino/websockets/: websockets.ino
Arduino/websockets/data/: index.html  main.css
esp-idf/Lora_Receiver/: CMakeLists.txt  sdkconfig
esp-idf/Lora_Receiver/main/: CMakeLists.txt  Kconfig.projbuild  main.c
esp-idf/Lora_Sender/: README.md  sdkconfig  sdkconfig.old
esp-idf/Spiffs_with_many_files/: Makefile
esp-idf/Spiffs_with_many_files/main/: main.cpp
esp-idf/arduino-proj/: CMakeLists.txt  readme.md
esp-idf/arduino-proj/main/: main.cpp
esp-idf/audio/i2s_basic/: CMakeLists.txt  README.md  sdkconfig
esp-idf/ble_gatt_client/: CMakeLists.txt  sdkconfig.old
esp-idf/ble_gatt_server/: sdkconfig  sdkconfig.old
esp-idf/blink/: sdkconfig
esp-idf/blink/main/: blink.c
esp-idf/curl/: .gitignore  CMakeLists.txt  sdkconfig
esp-idf/esp32_cam/: CMakeLists.txt  sdkconfig
esp-idf/ethernet/: Makefile  README.md  sdkconfig  sdkconfig.old
esp-idf/ethernet-w5500/: README.md  sdkconfig  sdkconfig.old
esp-idf/file2charArray/: partitions.csv  sdkconfig
esp-idf/file_system/: partitions.csv
esp-idf/i2s_mems/: CMakeLists.txt  sdkconfig  sdkconfig.old
linux_c/cJson/: CMakeLists.txt
linux_c/custom-socket-address/: readme.md
linux_c/file-operation/: .gitignore
linux_c/minimum-boilerplate/: CMakeLists.txt
linux_c/socket-pair/: CMakeLists.txt
pi-pico/blink/: CMakeLists.txt
pi-pico/blink_pico_w/: CMakeLists.txt
pi-pico/blink_pico_w/main/: CMakeLists.txt  blink.c
pi-pico/freeRtos_bliky/: CMakeLists.txt
pi-pico/freeRtos_bliky/blinky/: CMakeLists.txt  blinky.c
pi-pico/hello_uart/: CMakeLists.txt
pi-pico/hello_uart/main/: CMakeLists.txt  hello_uart.c
pi-pico/usb_print/: .gitignore  CMakeLists.txt  usb_print.c
pi-pico/wifi/: CMakeLists.txt
pi-pico/wifi/wifi_scan/: CMakeLists.txt  lwipopts.h
python/: mon_serial.py
stm32/: libpython2.7.md
stm32/adc-measurement/: .cproject  .mxproject  .project  adc-measurement Debug.launch  adc-measurement.ioc
stm32/adc-stm32-dma/: .cproject  .mxproject  .project  STM32L071CBTX_FLASH.ld  adc-stm32-dma Debug.launch  adc-stm32-dma.ioc
stm32/hello/: .cproject  .mxproject  hello Debug.launch  hello.ioc
stm32/myfirstProg/: .cproject  .mxproject  .project  myfirstProg Debug.launch  myfirstProg.ioc
stm32/pwn-g0-fixed-dutycycle-dma/: .cproject  .mxproject  .project  pwn-g0-fixed-dutycycle Debug.launch  pwn-g0-fixed-dutycycle.ioc
stm32/stm32F103-ext-flash/: .cproject  .mxproject  .project  stm32F103-ext-flash Debug.launch  stm32F103-ext-flash.ioc
stm32/stm32G0-i2cSlave/: .cproject  .mxproject  stm32G0-i2cSlave Debug.launch
stm32/timer-Input-capture-g0/: .cproject  .mxproject  .project  CMakeLists.txt  readme.md  timer-g0 Debug.launch  timer-g0.ioc
(+264 files in other folders)
